# gaia-decoupage-nom-voie

./: .coverage  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  coverage.xml  create_package.sh  pyproject.toml  pytest.ini  requirements.txt  retype.yml  settings.yaml  setup-datalab.sh  setup-ls3.sh  setup.sh  setup2.sh
.github/workflows/: build-image.yaml
argocd/: template-argocd.yaml
data/: all_types_voies_original.csv  code2lib.json  fichier_test.csv  libelles_toutes_formes.csv  type_voie.csv  type_voie_majic.csv
data/voies_annotees/: voies_echant_ban_0_done.csv  voies_echant_ban_1_done.csv  voies_echant_ban_2_done.csv  voies_echant_ban_compl_done.csv  voies_echant_majic_0_done.csv  voies_echant_majic_1_done.csv  voies_echant_majic_2_done.csv  voies_echant_rca_0_done.csv  voies_echant_rca_1_done.csv  voies_echant_referentiel_done.csv
docs/: api.md  construction_livrable.md  index.md  injection_dependance.md  lancement.md  montee_version.md  presentation.md  prise-en-main.md
docs/Lancement/: installation.md  lancement-api.md  lancement.md
kubernetes/: deployment.yml  ingress.yml  service.yml
src/: ban_multithread.py  pipeline_detect_type_voies.py
src/decoupage_libelles/: main.py  main2.py  pipeline_detect_type_voies.py
src/decoupage_libelles/config/: injection_manager.py  settings_configuration.py  type_voie_decoupage_launcher.py
src/decoupage_libelles/constants/: constant_dicts.py  constant_lists.py
src/decoupage_libelles/finders/: complement_finder.py  type_finder.py  voie_fictive_finder.py
src/decoupage_libelles/preprocessors/: type_voie_majic_preprocessor.py  voie_data_preprocessor.py
src/decoupage_libelles/scripts_parallelises/: config.yml  main.py  process_manual_labelisation.py
src/decoupage_libelles/utils/: type_finder_utils.py
src/decoupage_libelles/voie/: informations_on_libelle.py  voie.py
src/decoupage_libelles/voie_classes/: decoupage_voie.py  informations_on_libelle.py
src/preprocessors/: ponctuation_preprocessor.py  voie_data_preprocessor.py
src/processors/no_type/: no_type_voies_handler.py
src/processors/one_type/: one_type_assign_voies_type_not_first_pos.py  one_type_voies_handler.py
src/utils/: proc_utils.py  type_finder_utils.py  utils_for_lists.py
src/voie_classes/: informations_on_libelle.py  voie.py
src/voie_classes/analysers/: analyse_linguistique.py  analyse_voie.py
tests/: test_suite.py
tests/config_test/: test_type_voie_decoupage_launcher.py
tests/decoupe_voie_test/usecase/: test_assign_compl_type_lib_compl_use_case.py  test_assign_compl_type_lib_use_case.py  test_assign_lib_compl_use_case.py  test_assign_lib_type_use_case.py  test_assign_lib_use_case.py  test_assign_type_lib_compl_use_case.py  test_assign_type_lib_use_case.py
tests/entrypoints/web/: test_main_api.py
tests/finders_test/find_complement_test/: apply_complement_finder_on_voies.py  apply_complement_finder_on_voies_test.py  complement_finder.py  complement_finder_test.py
tests/finders_test/find_voie_fictive_test/: detect_type_fictif_for_one_type.py  detect_type_fictif_for_one_type_test.py  detecte_type_fictif_for_multi_types.py  detecte_type_fictif_for_multi_types_test.py  test_detect_type_fictif_for_one_type.py  test_detecte_type_fictif_for_multi_types.py
tests/preprocessors_test/: ponctuation_preprocessor_test.py
tests/utils_tests/: test_preproc_utils.py  test_proc_utils.py
(+296 files in other folders)
