[tool.poetry]
name = "gaia-decoupage-libelles"
version = "0.0.1"
description = "Programme de découpage des libellés du fichier MAJIC"
authors = ["Julien Gauchet <julien.gauchet@insee.fr>"]
readme = "README.md"
packages = [
    { include = "decoupage_libelles", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
injector = "^0.20.1"
dynaconf = "^3.2.0"
poetry-plugin-export = "^1.6.0"
click  = "^8.1.7" 

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 200

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*", "__init__.py"]
source = ["src/decoupage_libelles"]

[tool.coverage.report]
fail_under = 70

[build-system.publish]
url = "https://nexus.insee.fr/repository/pypi-internal/"
name = "gaia-decoupage-libelles"
