[tool.poetry]
name = "gaia-decoupage-libelles"
version = "0.0.1"
description = "Programme de découpage des libellés du fichier MAJIC"
authors = ["Julien Gauchet <julien.gauchet@insee.fr>"]
readme = "README.md"
packages = [{ include = "decoupage_libelles", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.0"
click = "^8.1.7"
tqdm = "^4.66.1"
spacy = "^3.7.0"
pandas = "^2.2.0"
pyarrow = "^15.0.2"
fastapi = "^0.110.0" 
uvicorn = "^0.29.0"
httpx = "^0.27.0" 
transformers = "^4.39.3"
spacy-curated-transformers = "^0.2.2"
unidecode = "^1.3.8"
# fr_dep_news_trf = { url = "https://github.com/explosion/spacy-models/releases/download/fr_dep_news_trf-3.7.0/fr_dep_news_trf-3.7.0.tar.gz" }

[tool.poetry.dev-dependencies]
poetry-plugin-export = "^1.6.0"
pytest = "^7.4.4"
coverage = "^7.4.0"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bugbear = "^23.12.2"
pyright = "^1.1.348"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 200

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*", "__init__.py"]
source = ["src"]

[tool.coverage.report]
fail_under = 0

[build-system.publish]
url = "https://nexus.insee.fr/repository/pypi-internal/"
name = "gaia-decoupage-libelles"
